envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-proxy
  labels:
    app: front-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-proxy
  template:
    metadata:
      labels:
        app: front-proxy
    spec:
      containers:
      - name: front-proxy
        image: mohinigonawala90/front-proxy
        ports:
        - containerPort: 10000
