envoy.yaml
static_resources:

  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              # - match:
              #     prefix: "/user"
              #   route:
              #     host_rewrite_literal: www.envoyproxy.io
              #     cluster: service_envoyproxy_io
              # - match:
              #     prefix: "/message"
              #   route:
              #     host_rewrite_literal: www.envoyproxy.io
              #     cluster: service_message
              - match:
                  prefix: "/customers"
                route:
                  host_rewrite_literal: www.envoyproxy.io
                  cluster: service_customer

  clusters:
  # - name: service_message
  #   type: LOGICAL_DNS
  #   # Comment out the following line to test on v6 networks
  #   dns_lookup_family: V4_ONLY
  #   load_assignment:
  #     cluster_name: service_message
  #     endpoints:
  #     - lb_endpoints:
  #       - endpoint:
  #           address:
  #             socket_address:
  #               address: envoy-message-proxy
  #               port_value: 10000
  # - name: service_envoyproxy_io
  #   type: LOGICAL_DNS
  #   # Comment out the following line to test on v6 networks
  #   dns_lookup_family: V4_ONLY
  #   load_assignment:
  #     cluster_name: service_envoyproxy_io
  #     endpoints:
  #     - lb_endpoints:
  #       - endpoint:
  #           address:
  #             socket_address:
  #               address: envoy-user-proxy
  #               port_value: 10000
  - name: service_customer
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: service_customer
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: envoy-customer-proxy
                port_value: 10000
